# docs/swagger.yaml
@@ -788,7 +788,7 @@ paths:
       summary: Create warehouse
       tags:
       - Warehouses
-  /api/v1/warehouses/:id:
+  /api/v1/warehouses/{id}:
     delete:
       description: delete warehouse by id
       parameters:
@@ -821,7 +821,7 @@ paths:
       summary: Get warehouse
       tags:
       - Warehouses
-    put:
+    patch:
       consumes:
       - application/json
       description: update warehouses
